# CardilloCxx

./: .clang-format  .clang-tidy  .gitignore  .readthedocs.yaml  CMakeLists.txt  CONDENSED_SOLVER_REPORT.md  Makefile  README.md  build.sh  build_log.txt  gmon.out  pyproject.toml
benchmarks/matrix_bench/: CMakeLists.txt  README.md  gmon.out  plot_bench.py
benchmarks/matrix_bench/src/: main.cpp
examples/: CMakeLists.txt  collisions_demo.cpp  config.txt  debug_config.txt  example_main.hpp  free_flight.cpp  main.cpp  physics_engine.cpp  pm_midpoint.cpp  rigid_body_test.cpp
examples/scenes/: SceneBase.hpp
examples/scenes/3DPrinter/: ThreeDPrinterScene.hpp  scene.config  visualize.py
examples/scenes/beamTest/: BeamTestScene.hpp  scene.config
examples/scenes/billard/: BillardScene.hpp  scene.config
examples/scenes/billiard/: BilliardScene.hpp  scene.config
examples/scenes/cable/: CableScene.hpp  scene.config
examples/scenes/cable_bunch/: CableBunchScene.hpp  scene.config
examples/scenes/cantilever/: CantileverScene.hpp  scene.config
examples/scenes/cardhouse/: CardhouseScene.hpp  scene.config
examples/scenes/chain/: ChainScene.hpp  scene.config  scene_nesterov.config  scene_nesterov_warmstart.config  scene_standard.config
examples/scenes/chainFountain/: ChainFountain.hpp  scene.config
examples/scenes/constraintTest/: ConstraintTestScene.hpp  scene.config
examples/scenes/conveyor/: ConveyorScene.hpp  scene.config
examples/scenes/cradle/: NewtonsCradleScene.hpp  scene.config
examples/scenes/discreteRod/: DiscreteRodScene.hpp  DiscreteRodScene.hpp.bak  scene.config
examples/scenes/domino/: DominoScene.hpp  DominoScene.hpp.bak  scene.config  scene_clarabel.config  scene_condensed.config  scene_conicxx.config  scene_nesterov.config  scene_nesterov_warm.config  scene_nesterov_warmstart.config  scene_newton.config  scene_qoco.config  scene_standard.config
examples/scenes/double_pendulum/: DoublePendulumScene.hpp  scene.config
examples/scenes/dynamic_constraint/: DynamicConstraintScene.hpp  scene.config
examples/scenes/dzhanibekov/: dzhanibekov.hpp  plotter.py  scene.config
examples/scenes/euler_disk/: EulerDiskScene.hpp  scene.config
examples/scenes/fabric/: FabricScene.hpp  scene.config  scene2.config  scene3.config  scene4.config  scene5.config
examples/scenes/gears/: GearsScene.hpp  GearsScene.hpp.bak  scene.config
examples/scenes/hangbride/: HangbrideScene.hpp  HangbrideScene.hpp.bak  scene.config  scene_no_collision.config
examples/scenes/heightmap/: HeightmapScene.hpp  scene.config
examples/scenes/jenga/: scene.config  scene.hpp  scene.hpp.bak
examples/scenes/leaningTower/: LeaningTowerScene.hpp  scene.config  scene_nesterov.config  scene_nesterov_warmstart.config  scene_qoco.config  scene_standard.config
examples/scenes/metronome/: MetronomeScene.hpp  scene.config
examples/scenes/net/: NetScene.hpp  scene.config  scene2.config
examples/scenes/painleve/: painleveScene.hpp  painleveScene.hpp.bak  scene.config
examples/scenes/parcel/: ParcelScene.hpp  ParcelScene.hpp.bak  scene.config
examples/scenes/pendulum/: PendulumScene.hpp  scene.config
examples/scenes/rail/: RailScene.hpp  scene.config
examples/scenes/rodAssembly/: RodAssemblyScene.hpp  scene.config
examples/scenes/rotating_ball/: RotatingBallScene.hpp  RotatingBallScene.hpp.bak  scene.config
examples/scenes/slinky/: SlinkyScene.hpp  SlinkyScene.hpp.bak  scene.config  scene_clarabel.config  scene_condensed.config  scene_conicxx.config  scene_nesterov.config  scene_nesterov_warmstart.config  scene_qoco.config  scene_standard.config
examples/scenes/softbody/: SoftbodyTestScene.hpp  SoftbodyTestScene.hpp.bak  scene.config
examples/scenes/spaghetti/: SpaghettiScene.hpp  scene.config
examples/scenes/sphere_packing/: SpherePackingScene.hpp  scene.config  scene.hpp  scene.hpp.bak  scene_clarabel.config  scene_nesterov_warmstart.config  scene_qoco.config
examples/scenes/springTest/: SpringTestScene.hpp  scene.config
src/: CMakeLists.txt  cardillo.cpp  cardillo.hpp  mylib.cpp  mylib.hpp  point.hpp  rigid_body.hpp  types.hpp
src/bodies/: frame.hpp  point_mass.hpp  rigid_body.hpp
src/collision/: box_box_collision.cpp  broad_phase.cpp  collision.cpp  collision.hpp  collision_coal.cpp  collision_coal.hpp  collision_manager.cpp  contact_tracker.cpp  contact_tracker.hpp  narrow_phase.cpp  narrow_phase.hpp  tangent_frame.hpp  transform_utils.hpp  types.hpp
src/comm/: communication.cpp  communication.hpp
src/config/: config.cpp  config.hpp  constraints.cpp  path.hpp.in
src/constraints/: Projected_position_orientation_base.cpp  constraints.hpp
src/io/: csv_writer.hpp  heightmap_loader.cpp  heightmap_loader.hpp  mesh_generator.cpp  mesh_generator.hpp  pvd_writer.cpp  pvd_writer.hpp  softbody_loader.cpp  softbody_loader.hpp  vtk_sphere_util.cpp  vtk_sphere_util.hpp  vtk_writer.cpp  vtk_writer.hpp  vtk_writer_binary.cpp  vtk_writer_binary.hpp
src/misc/: block_diagonal.hpp  block_sparse_ldlt.cpp  block_sparse_ldlt.hpp  contact_rho.cpp  contact_rho.hpp  dofs.hpp  graph_coloring.cpp  graph_coloring.hpp  math_helper.hpp  spline.cpp  spline.hpp  triplet_matrix.hpp  types.hpp
src/partitioning/: naive_partitioner.cpp  naive_partitioner.hpp
src/physics/: assets.cpp  assets.hpp  beam_element_updater.cpp  beam_element_updater.hpp  beam_factory.cpp  body_factory.cpp  body_factory.hpp  constraint_factory.hpp  constraints.cpp  constraints.hpp  dynamics_assembler.cpp  dynamics_assembler.hpp  ecs_types.hpp  entity_state_updater.cpp  entity_state_updater.hpp  force_interaction.cpp  force_interaction.hpp  physics.hpp  physics_engine.hpp  physics_system.cpp  physics_system.hpp  physics_types.cpp  physics_types.hpp  world.cpp  world.hpp
src/rigid_body/: rigid_body.hpp  transformations.hpp
src/solver/: CPG.cpp  CPG.h  dual_stoermer_verlet.cpp  dual_stoermer_verlet.hpp  moreau.cpp  moreau.hpp  physics_system.cpp  projected_jacobi.cpp  projected_jacobi.hpp  solver_base.hpp  unused.hpp  warmstart.hpp
src/tests/: matrix_tests.cpp
src/world/: world.cpp  world.hpp
(+1499 files in other folders)
