function(cardillo_add_scene_example target scene_header scene_type)
	add_executable(${target} main.cpp)
	target_compile_definitions(${target} PRIVATE
		CARDILLO_EXAMPLE_SCENE_HEADER="${scene_header}"
		CARDILLO_EXAMPLE_SCENE_TYPE=${scene_type}
	)
	target_link_libraries(${target} PRIVATE cardillo)
endfunction()

cardillo_add_scene_example(stacked_spheres "scenes/stacked_spheres/StackedSpheresScene.hpp" StackedSpheresScene)
cardillo_add_scene_example(domino "scenes/domino/DominoScene.hpp" DominoScene)
cardillo_add_scene_example(cardhouse "scenes/cardhouse/CardhouseScene.hpp" CardhouseScene)
cardillo_add_scene_example(spring_test "scenes/springTest/SpringTestScene.hpp" SpringTestScene)
cardillo_add_scene_example(rod_assembly "scenes/rodAssembly/RodAssemblyScene.hpp" RodAssemblyScene)
cardillo_add_scene_example(net "scenes/net/NetScene.hpp" NetScene)
cardillo_add_scene_example(wilberforce "scenes/wilberforce/WilberforcePendulum.hpp" WilberforcePendulumScene)
cardillo_add_scene_example(hangbridge "scenes/hangbride/HangbrideScene.hpp" HangbrideScene)
cardillo_add_scene_example(softbody "scenes/softbody/SoftbodyTestScene.hpp" SoftbodyTestScene)
cardillo_add_scene_example(chain "scenes/chain/ChainScene.hpp" ChainScene)
cardillo_add_scene_example(painleve "scenes/painleve/painleveScene.hpp" PainleveScene)
cardillo_add_scene_example(rotating_ball "scenes/rotating_ball/RotatingBallScene.hpp" RotatingBallScene)
cardillo_add_scene_example(rail "scenes/rail/RailScene.hpp" RailScene)
cardillo_add_scene_example(dzhanibekov "scenes/dzhanibekov/dzhanibekov.hpp" DzhanibekovScene)
cardillo_add_scene_example(parcel "scenes/parcel/ParcelScene.hpp" ParcelScene)
cardillo_add_scene_example(discrete_rod "scenes/discreteRod/DiscreteRodScene.hpp" DiscreteRodScene)
cardillo_add_scene_example(slinky "scenes/slinky/SlinkyScene.hpp" SlinkyScene)
cardillo_add_scene_example(euler_disk "scenes/euler_disk/EulerDiskScene.hpp" EulerDiskScene)
cardillo_add_scene_example(unilateral "scenes/unilateral/UnilateralScene.hpp" UnilateralScene)
cardillo_add_scene_example(woodpecker "scenes/woodpecker/WoodpeckerScene.hpp" WoodpeckerScene)
cardillo_add_scene_example(spaghetti "scenes/spaghetti/SpaghettiScene.hpp" SpaghettiScene)
cardillo_add_scene_example(metronome "scenes/metronome/MetronomeScene.hpp" MetronomeScene)
cardillo_add_scene_example(strandbeest "scenes/strandbeest/StrandbeestScene.hpp" StrandbeestScene)
cardillo_add_scene_example(gears "scenes/gears/GearsScene.hpp" GearsScene)
cardillo_add_scene_example(leaning_tower "scenes/leaningTower/LeaningTowerScene.hpp" LeaningTowerScene)
cardillo_add_scene_example(pendulum "scenes/pendulum/PendulumScene.hpp" PendulumScene)
cardillo_add_scene_example(constraint_test "scenes/constraintTest/ConstraintTestScene.hpp" ConstraintTestScene)
cardillo_add_scene_example(cantilever "scenes/cantilever/CantileverScene.hpp" CantileverScene)
cardillo_add_scene_example(fabric "scenes/fabric/FabricScene.hpp" FabricScene)
cardillo_add_scene_example(double_pendulum "scenes/double_pendulum/DoublePendulumScene.hpp" DoublePendulumScene)
cardillo_add_scene_example(sphere_packing "scenes/sphere_packing/SpherePackingScene.hpp" SpherePackingScene)
cardillo_add_scene_example(tube "scenes/tube/TubeScene.hpp" TubeScene)
cardillo_add_scene_example(string_test "scenes/stringTest/StringTestScene.hpp" StringTestScene)
cardillo_add_scene_example(table "scenes/table/TableScene.hpp" TableScene)
cardillo_add_scene_example(tennis "scenes/tennis/TennisScene.hpp" TennisScene)
cardillo_add_scene_example(conveyor "scenes/conveyor/ConveyorScene.hpp" ConveyorScene)
cardillo_add_scene_example(three_d_printer "scenes/3DPrinter/ThreeDPrinterScene.hpp" ThreeDPrinterScene)
cardillo_add_scene_example(cable_bunch "scenes/cable_bunch/CableBunchScene.hpp" CableBunchScene)
cardillo_add_scene_example(jenga "scenes/jenga/scene.hpp" JengaScene)
cardillo_add_scene_example(dynamic_constraint "scenes/dynamic_constraint/DynamicConstraintScene.hpp" DynamicConstraintScene)
cardillo_add_scene_example(billard "scenes/billard/BillardScene.hpp" BillardScene)